# buzzy

./: .gitignore  .gitmodules  README.md  debug.sh  srcdst0x.txt  srcdstn0x.txt
buzzer/: Cargo.toml
buzzer/src/: elf_parser.rs
buzzy/: Cargo.toml
buzzy/fuzz/: Cargo.toml
buzzy/fuzz/fuzz_targets/: map_header.rs  random.rs  random_bytes.rs  random_maps.rs  rule_break.rs  scannell_maps.rs  stack_sequence.rs  test.rs
buzzy/obj-files/: header.c
buzzy/src/: common.rs  ebpf_generator.rs  elf_parser.rs  lib.rs  random_bytes_parser.rs  random_maps_parser.rs  symbol_table.rs
obj-files/: header.c  init_map.c  map_extended.c  returnzero.c
refuzzer/: Cargo.toml
refuzzer/fuzz/: Cargo.toml
refuzzer/fuzz/fuzz_targets/: first.rs  map_header.rs  random.rs  stack_sequence.rs  test.rs
refuzzer/obj-files/: header.c
refuzzer/src/: config_table.rs  ebpf_generator.rs  elf_parser.rs  lib.rs  symbol_table.rs
rust-ebpf-fuzzer/: Cargo.toml
rust-ebpf-fuzzer/fuzz/: Cargo.toml
rust-ebpf-fuzzer/fuzz/fuzz_targets/: first.rs
rust-ebpf-fuzzer/src/: ebpf_generator.rs  elf_parser.rs  lib.rs  main.rs
scripts/: README.md  collect_exp_data.py  count_errors.py  create_map.py  hello.py  hello_ebpf.py  hello_map.py  init_map.py  init_map_and_test.py  instr_graphs.py  map_access_test.py  print_all_errors.py  print_error_logs.py  print_first_unique_error.py  print_target_output.py  requirements.txt  translate.py
