[package]
name = "buzzy-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
rbpf = { path = "../../rbpf" }
arbitrary = { version = "1", features = ["derive"] }
libfuzzer-sys = "0.4"
chrono = "0.4.24"

[dependencies.buzzy]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "test"
path = "fuzz_targets/test.rs"
test = false
doc = false

[[bin]]
name = "random"
path = "fuzz_targets/random.rs"
test = false
doc = false

[[bin]]
name = "map_header"
path = "fuzz_targets/map_header.rs"
test = false
doc = false

[[bin]]
name = "stack_sequence"
path = "fuzz_targets/stack_sequence.rs"
test = false
doc = false
