[package]
name = "refuzzer-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
rbpf = { path = "../../rbpf" }
arbitrary = { version = "1", features = ["derive"] }
libfuzzer-sys = "0.4"

[dependencies.refuzzer]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "test"
path = "fuzz_targets/test.rs"
test = false
doc = false

[[bin]]
name = "random"
path = "fuzz_targets/random.rs"
test = false
doc = false